src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__emulator_osc_state_changes__ghostty-vt.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
old-01
old-02
old-03
old-04
old-05
old-06
old-07
[0m[4m[38;5;4mlink-label[0m
[0m[38;5;1mpalette-one[0m
new-01
new-02
new-03
new-04
new-05
new-06
new-07
new-08
new-09
new-10
new-11
new-12
new-13
new-14
new-15
new-16
new-17
new-18
new-19
new-20
new-21
new-22
new-23
new-24
new-25
new-26
new-27
new-28
new-29
new-30
osc-ready[0m
