src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__emulator_osc_state_changes__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
[34;4mlink-label[m
[31mpalette-one[m
new-01[m
new-02[m
new-03[m
new-04[m
new-05[m
new-06[m
new-07[m
new-08[m
new-09[m
new-10[m
new-11[m
new-12[m
new-13[m
new-14[m
new-15[m
new-16[m
new-17[m
new-18[m
new-19[m
new-20[m
new-21[m
new-22[m
new-23[m
new-24[m
new-25[m
new-26[m
new-27[m
new-28[m
new-29[m
new-30[m
osc-ready[m
[m
