src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__emulator_osc_state_changes__tmux.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
old-01              
old-02              
old-03              
old-04              
old-05              
old-06              
old-07              
old-08              
old-09              
old-10              
old-11              
old-12              
old-13              
old-14              
old-15              
old-16              
old-17              
old-18              
old-19              
old-20              
old-21              
old-22              
old-23              
old-24              
old-25              
old-26              
old-27              
old-28              
old-29              
old-30              
[4m[34m]8;;https://example.test/terminai\link-label[0m]8;;\          
[31mpalette-one[39m         
new-01              
new-02              
new-03              
new-04              
new-05              
new-06              
new-07              
new-08              
new-09              
new-10              
new-11              
new-12              
new-13              
new-14              
new-15              
new-16              
new-17              
new-18              
new-19              
new-20              
new-21              
new-22              
new-23              
new-24              
new-25              
new-26              
new-27              
new-28              
new-29              
new-30              
osc-ready
