src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__emulator_osc_state_changes__zellij.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
[mold-01
[mold-02
[mold-03
[mold-04
[mold-05
[mold-06
[mold-07
[mold-08
[mold-09
[mold-10
[mold-11
[mold-12
[mold-13
[mold-14
[mold-15
[mold-16
[mold-17
[mold-18
[mold-19
[mold-20
[mold-21
[mold-22
[mold-23
[mold-24
[mold-25
[mold-26
[mold-27
[mold-28
[mold-29
[mold-30

[34m[49m[29m[28m[27m[25m[25m[22m[4m[22m[23mlink-label
[31m[49m[29m[28m[27m[25m[25m[22m[24m[22m[23mpalette-one
[mnew-01
[mnew-02
[mnew-03
[mnew-04
[mnew-05
[mnew-06
[mnew-07
[mnew-08[m
[mnew-09
[mnew-10
[mnew-11
[mnew-12
[mnew-13
[mnew-14
[mnew-15
[mnew-16
[mnew-17
[mnew-18
[mnew-19
[mnew-20
[mnew-21
[mnew-22
[mnew-23
[mnew-24
[mnew-25
[mnew-26
[mnew-27
[mnew-28
[mnew-29
[mnew-30
[mosc-ready
[m
